objects/Student_Programme__c.object
<CustomObject><fields>
<fields>
        <fullName>Joint_UoL_Malawi_College_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Links to SAF field 'Is this a Joint UoL/Malawi College of Medicine application?'</inlineHelpText>
        <label>Joint UoL/Malawi College Application?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Justify_why_bench_fee_unable_requested__c</fullName>
        <inlineHelpText>SAF field 'If 'No', justify whey a bench fee cannot be requested and detail any expectations of project support from LSTM funds.'</inlineHelpText>
        <label>Justify why bench fee unable requested</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>LSTM_Authorisation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if LSTM Authorisation submitted</inlineHelpText>
        <label>LSTM Authorisation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LSTM_Email__c</fullName>
        <description>Taken from Contact object</description>
        <label>LSTM Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>LSTM_No__c</fullName>
        <description>Taken from Contact object</description>
        <label>LSTM No</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_City__c</fullName>
        <description>Location city of proposed project</description>
        <inlineHelpText>Enter the location City of the proposed project</inlineHelpText>
        <label>Location: City</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_Country__c</fullName>
        <description>Country location of proposed project</description>
        <inlineHelpText>Select the country location of the proposed project</inlineHelpText>
        <label>Location: Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Location_Home_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify whether the student is returning to their home county for their proposed project</description>
        <inlineHelpText>Select if the student is returning to their home country for their proposed project</inlineHelpText>
        <label>Location: Home Country</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Location_Region__c</fullName>
        <description>Region location of prosed project</description>
        <inlineHelpText>Enter the Region location of the proposed project</inlineHelpText>
        <label>Location: Region</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_of_Study__c</fullName>
        <label>Location of Study</label>
        <picklist>
            <picklistValues>
                <fullName>On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>MSTUFEE_Code__c</fullName>
        <description>Hidden admin field; HESA Code for MSTUFEE (Major source of tuition fees) field</description>
        <formula>Major_source_of_tuition_fees__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSTUFEE Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>MSTUFEE_FA__c</fullName>
        <label>MSTUFEE FA</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>MTI_Start_Date__c</fullName>
        <description>DipUKMP application required field</description>
        <label>MTI Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Major_source_of_tuition_fees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source: https://www.hesa.ac.uk/index.php?option=com_studrec&amp;task=show_file&amp;mnl=15051&amp;href=a^_^MSTUFEE.html</description>
        <inlineHelpText>HESA codes for student's major source of tuition fees</inlineHelpText>
        <label>Major source of tuition fees</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HESA_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MSTUFEE</value>
            </filterItems>
            <filterItems>
                <field>HESA_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Student Programmes</relationshipLabel>
        <relationshipName>Student_Programmes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Master_Name__c</fullName>
        <description>Hidden, used for transcripts</description>
        <formula>Programme__r.Master_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Mode_Change_Date__c</fullName>
        <description>For PGR HESA return</description>
        <inlineHelpText>For HESA return</inlineHelpText>
        <label>Mode Change Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Mode_of_Study__c</fullName>
        <label>Mode of Study</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>NHS_Trust_Address__c</fullName>
        <description>DipUKMP application required field</description>
        <label>NHS Trust Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>NHS_Trust__c</fullName>
        <description>DipUKMP application required field</description>
        <label>NHS Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Name_Address_of_Funding_Body__c</fullName>
        <inlineHelpText>If applied for a scholarship/sponsorship, please state the name and address of the funding body</inlineHelpText>
        <label>Name &amp; Address of Funding Body</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Name_of_Sponsor_Financial_Guarantor__c</fullName>
        <inlineHelpText>Payment Guarantee to be completed and stamped by the sponsor organisation. Alternatively, enclose written confirmation from sponsor (invoice required).</inlineHelpText>
        <label>Name of Sponsor/Financial Guarantor</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Name_s_of_interview__c</fullName>
        <label>Name(s) of Interviewer(s) (free text)</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>National_of_Majority_English_Speaking__c</fullName>
        <inlineHelpText>Antigua and Barbuda
Australia
the Bahamas
Barbados
Belize
Canada
Dominica
Grenada
Guyana
Jamaica
New Zealand
St Kitts and Nevis
St Lucia
St Vincent and the Grenadines
Trinidad and Tobago
USA</inlineHelpText>
        <label>National of Majority English Speaking</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Nationality_from_Student__c</fullName>
        <formula>Student__r.HESA_Nationality__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality (from Student)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>New_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Upload</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Non_EEA_student_Visa_Details__c</fullName>
        <inlineHelpText>If you are a non-EEA student, you must supply details of any current UK visa.</inlineHelpText>
        <label>Non-EEA student - Visa Details</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>OHA_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Occupational Health Assessment Exemption</description>
        <inlineHelpText>Select is student is seeking Occupational Health Assessment exemption.</inlineHelpText>
        <label>OHA Exemption (Form 2)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>OHA_Notes__c</fullName>
        <description>Occupational Health Assessment Notes</description>
        <inlineHelpText>Enter any Occupational Health Assessment Notes</inlineHelpText>
        <label>OHA Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>OHA_Outcome__c</fullName>
        <description>Completed OHA Outcome by WTC</description>
        <inlineHelpText>Select the OHA Outcome by the WTC (Form 7)</inlineHelpText>
        <label>OHA Outcome</label>
        <picklist>
            <controllingField>Research_Project_Type__c</controllingField>
            <picklistValues>
                <fullName>They are medically fit for working in research labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>They are medically fit for working in research labs (with recommended adjustments)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational vaccination is required for lab work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further occupational assessments are required for lab work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form 7 signed off by WTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WTC seeking further advice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>OHA_Status__c</fullName>
        <description>Status of Occupational Health Assessment</description>
        <inlineHelpText>Select the status of the Occupational Health Assessment (Form 7)</inlineHelpText>
        <label>OHA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Offer_Conditions__c</fullName>
        <description>For Admin staff to detail conditions for offer to applicant</description>
        <label>Offer Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Other_Relevant_Skills_and_Experience__c</fullName>
        <label>Other Relevant Skills and Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Overseas_Project_Fee__c</fullName>
        <description>Overseas Project Fee</description>
        <inlineHelpText>Enter the fee for undertaking an overseas project</inlineHelpText>
        <label>Overseas Project Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>PAP_Members__c</fullName>
        <description>Written to by Workflow from Research Period</description>
        <label>PAP Members</label>
        <length>180</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PGR_Programme_Length_Years__c</fullName>
        <description>Length of PGR Programme in Years</description>
        <inlineHelpText>Length of PGR Programme in Years</inlineHelpText>
        <label>PGR Programme Length (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received via Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instalment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Payment_method_if_Self_financing__c</fullName>
        <label>Payment method if Self-financing</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Personal_Email__c</fullName>
        <description>Populates by workflow when Stage=Submitted</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Personal_Statement__c</fullName>
        <label>What long-term benefits do you envisage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Photo_Check__c</fullName>
        <formula>IF( Student__r.Show_Photo__c = "None Provided" , "N", "Y")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Check</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Code__c</fullName>
        <formula>Programme__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_End_Date__c</fullName>
        <formula>Programme__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Programme (instance) level</inlineHelpText>
        <label>Programme End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Programme_Length__c</fullName>
        <inlineHelpText>Length of Programme in Research Periods</inlineHelpText>
        <label>Programme Length (Periods)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Programme_Start_Date__c</fullName>
        <formula>Programme__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Programme (instance) level</inlineHelpText>
        <label>Programme Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <formula>TEXT(  Programme__r.Programme_Version__r.Programme_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Programme must be active (i.e. most recent)</errorMessage>
            <filterItems>
                <field>Programme__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Student Programmes</relationshipLabel>
        <relationshipName>Students_on_Programme1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project_Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether the Project Fee has been paid in advance</description>
        <inlineHelpText>Select if the Project Fee has been paid in advance</inlineHelpText>
        <label>Project Fee Paid</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Proposed_Area_of_Research__c</fullName>
        <label>Proposed Area of Research</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>QUALENT3_Code__c</fullName>
        <description>For HESA XML output</description>
        <formula>Highest_qualification_on_entry__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>QUALENT3 Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Qualification_Experience__c</fullName>
        <label>Qualifications/Experience</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Qualifications_Check__c</fullName>
        <description>Used in the Registration process</description>
        <label>Qualifications Check</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>R1_Comments_Received__c</fullName>
        <description>Date comments received from Reviewer 1</description>
        <inlineHelpText>Date comments received from Reviewer 1</inlineHelpText>
        <label>R1 Comments Received</label>
        <type>Date</type>
    </fields><fields>
        <fullName>R2_Comments_Received__c</fullName>
        <description>Date comments received from Reviewer 2</description>
        <inlineHelpText>Date comments received from Reviewer 2</inlineHelpText>
        <label>R2 Comments Received</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RA_Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Risk Assessment Exemption</description>
        <inlineHelpText>Select is student is seeking exemption from Risk Assessment</inlineHelpText>
        <label>RA Exemption (Form 2)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RA_Status__c</fullName>
        <description>Records the status of the Fieldwork Risk Assessment</description>
        <inlineHelpText>Select the status of the Fieldwork Risk Assessment</inlineHelpText>
        <label>RA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved (with conditions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-submitted (AWC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-submitted (Referred)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved (conditions met)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Reason_for_Ending_Code__c</fullName>
        <description>Admin only, for HESA XML reporting</description>
        <formula>If ( TEXT ( Reason_for_Ending__c) = "Successful completion of course", "1",
   If ( TEXT ( Reason_for_Ending__c) = "Academic failure/left in bad standing/not permitted to progress", "2",
      If ( TEXT ( Reason_for_Ending__c) = "Transferred to another provider", "3",
         If ( TEXT ( Reason_for_Ending__c) = "Health reasons", "4",
            If ( TEXT ( Reason_for_Ending__c) = "Death", "5",
               If ( TEXT ( Reason_for_Ending__c) = "Financial reasons", "6",
                  If ( TEXT ( Reason_for_Ending__c) = "Other personal reasons &amp; dropped out", "7",
                     If ( TEXT ( Reason_for_Ending__c) = "Written off after lapse of time", "8",
                        If ( TEXT ( Reason_for_Ending__c) = "Exclusion", "9", 
                           If ( TEXT ( Reason_for_Ending__c) = "Gone into employment", "10",
                              If ( TEXT ( Reason_for_Ending__c) = "Other", "11",
                                 If ( TEXT ( Reason_for_Ending__c) = "Transferred out as part of collaborative supervision arrangements", "12", 
                                    If ( TEXT ( Reason_for_Ending__c) = "Completion of course - result unknown", "98",
                                       If ( TEXT ( Reason_for_Ending__c) = "Unknown", "99", 
                                       Null)

                                    )
                                 )
                              )
                           )
                        )
                     ) 
                  )
               )
            )
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>Reason for Ending Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Reason_for_Ending__c</fullName>
        <description>HESA list of for reasons for ending (Instance.RSNEND) 
From: https://www.hesa.ac.uk/index.php?option=com_studrec&amp;task=show_file&amp;mnl=15051&amp;href=a^_^RSNEND.html</description>
        <inlineHelpText>HESA provided list</inlineHelpText>
        <label>Reason for Ending</label>
        <picklist>
            <picklistValues>
                <fullName>Successful completion of course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic failure/left in bad standing/not permitted to progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to another provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other personal reasons &amp; dropped out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written off after lapse of time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone into employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred out as part of collaborative supervision arrangements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion of course - result unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Reasons_for_choosing_programme__c</fullName>
        <label>Why have you chosen this programme</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Reasons_for_choosing_to_study_at_LSTM__c</fullName>
        <label>Why do you want to study at LSTM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Recalculate_Module_Scores__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by 'Recalculate Scores' javascript button. Invokes 'Flow - Student Module Score rollup - SP' process. Hidden from page layouts.</description>
        <inlineHelpText>Set by 'Recalculate Scores' javascript button. Invokes 'Flow - Student Module Score rollup - SP' process. Hidden from page layouts.</inlineHelpText>
        <label>Recalculate Module Scores</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Received_a_scholarship_sponsorship_offer__c</fullName>
        <inlineHelpText>If yes, please enclose a copy of your offer letter.
If no, please state the date by which you expect to have received an offer.
Please ensure that you notify the Programme Administrator and forward a copy of offer letter as soon as it becomes available</inlineHelpText>
        <label>Received a scholarship/sponsorship offer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>References_Seen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SAF field 'Have you seen references?'</inlineHelpText>
        <label>References Seen?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Registration_Password__c</fullName>
        <description>Takes value from Contact.LSTM TP, via workflow</description>
        <formula>Student__r.Registration_Password__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Password</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Regular_contact_with_animals__c</fullName>
        <inlineHelpText>SAF field 'Involve regular contact with animals?'</inlineHelpText>
        <label>Regular contact with animals?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Require_animal_licence__c</fullName>
        <inlineHelpText>SAF field 'Require an animal licence?'</inlineHelpText>
        <label>Require animal licence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Require_ethical_approval_in_country__c</fullName>
        <inlineHelpText>SAF field 'Require approval by ethical approval in-country'</inlineHelpText>
        <label>Require ethical approval in-country?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Required_Credits__c</fullName>
        <formula>Programme__r.Academic_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Takes Academic Credits value from Programme</inlineHelpText>
        <label>Required Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Research_Council__c</fullName>
        <description>For HESA PGR return; include all values for now, can be made inactive</description>
        <inlineHelpText>For HESA return</inlineHelpText>
        <label>Research Council</label>
        <picklist>
            <picklistValues>
                <fullName>Biotechnology &amp; Biological Sciences Research Council (BBSRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Research Council (MRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Environmental Research Council (NERC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering &amp; Physical Sciences Research Council (EPSRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic &amp; Social Research Council (ESRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Humanities Research Council (AHRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Technology Facilities Council (STFC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Research Council student</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Research_Mode_of_Study__c</fullName>
        <label>Research Mode of Study</label>
        <picklist>
            <picklistValues>
                <fullName>On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>    </validationRules></CustomObject>